@@ -67,6 +67,7 @@
 #include "xpm/ut2.xpm"
 #include "xpm/ut2004.xpm"
 #include "xpm/netp.xpm"
+#include "xpm/nexuiz.xpm"
 
 #include "xpm/gamespy3d.xpm"
 #include "xpm/ssam.xpm"
