@@ -1,3 +1,76 @@
+# QStat configuration file
+#
+# See qstat documentation (qstatdoc.html) for instructions
+# http://www.qstat.org
+
+gametype SOF2S new extend Q3S
+    name = Soldier of Fortune 2
+    default port = 20100
+    template var = SOLDIEROFFORTUNE2
+    game rule = gametype
+end
+
+# SOF2 public master: master.sof2.ravensoft.com
+# The 2003 protocol is for SOF2 1.01
+# The 2004 protocol is for SOF2 1.02
+gametype SOF2M new extend Q3M
+    name = SOF2 Master
+    default port = 20110
+    template var = SOF2MASTER
+    master protocol = 2004
+    master query = SOF2FULL
+    master for gametype = sof2s
+end
+
+# The 2002 protocol is for SOF2 1.0
+gametype SOF2M1.0 new extend SOF2M
+    name = SOF2 Master (1.0)
+    master protocol = 2002
+end
+
+gametype CRS new extend GPS
+    name = Command and Conquer: Renegade
+    default port = 25300
+    template var = CNCRENEGADE
+    game rule = gametype
+end
+
+# MOHAA supports two status protocols, Gamespy and Quake 3.
+# Seems like servers support one or the other, but not both at the same time.
+# The Gamespy protocol returns player name, frags, ping, and deaths.
+gametype MAS new extend GPS
+    name = Medal of Honor: Allied Assault
+    default port = 12300
+    template var = MOHALLIEDASSAULT
+    game rule = gametype
+end
+
+# MOHAA support for the Q3 protocol is broken and more limited.  The
+# response to "getinfo" does not include the current and max players
+# (they're always zero).  The response to "getstatus" has the correct
+# current and max players, but only reports player name and ping.
+# If -R or -P options are specified, then both "getinfo" and "getstatus"
+# are sent.  Otherwise only "getinfo" is sent.
+gametype MAQS new extend Q3S
+    name = Medal of Honor: Allied Assault (Q)
+    default port = 12300
+    template var = MOHALLIEDASSAULT
+    game rule = gametype
+    status packet = \xff\xff\xff\xff\x02getinfo\n
+    status2 packet = \xff\xff\xff\xff\x02getstatus\n
+end
+
+# Half-Life supports a Quake 2 style status protocol, but only for
+# basic status, there's no player or extended rule information.  The
+# server rule names are different from HLS.
+gametype HLQS new extend Q2S
+    name = Half-Life
+    template var = HALFLIFE
+    default port = 27015
+    game rule = gamedir
+    status packet = \xff\xff\xff\xffinfostring\x00
+end
+
 # Config for Serious Sam SMS
 gametype SMS new extend GPS
    name = Serious Sam
@@ -6,6 +79,7 @@ gametype SMS new extend GPS
    template var = SERIOUSSAM
    game rule = gametype
 end
+
 # Config for Medal of Honor: Allied Assault MHS
 gametype MHS new extend Q3S
    name = Medal of Honor: Allied Assault
@@ -31,6 +105,7 @@ gametype CODM new extend Q3M
     master for gametype = CODS
     master query = full empty
 end
+
 # Americas Army 2.2
 gametype AMS new extend GS2
    name = America's Army 2.2
@@ -41,6 +116,7 @@ gametype AMS new extend GS2
    flags = TF_SINGLE_QUERY|TF_U2_NAMES
 end
 
+# enemy territory
 gametype WOETS new extend Q3S
     name = Enemy Territory
     template var = ENEMYTERRITORY
@@ -85,4 +161,19 @@ gametype UT2004S new extend UT2S
 end
 gametype UT2004M modify
     master for gametype = UT2004S
+end
+
+gametype NEXUIZS new extend Q3S
+    name = Nexuiz
+    template var = NEXUIZ
+    game rule = gamename
+end
+gametype NEXUIZM new extend Q3M
+    name = Nexuiz Master
+    template var = NEXUIZMASTER
+    default port = 27950
+    master packet = \377\377\377\377getservers Nexuiz %s %s
+    master protocol = 3
+    master query = empty full
+    master for gametype = NEXUIZS
 end
