@@ -1,0 +1,36 @@
+/* XPM */
+static char * nexuiz_xpm[] = {
+"16 16 17 1",
+" 	c None",
+".	c #000300",
+"+	c #0B0D09",
+"@	c #181917",
+"#	c #252624",
+"$	c #363835",
+"%	c #424441",
+"&	c #4D4E4C",
+"*	c #565855",
+"=	c #5F605E",
+"-	c #656764",
+";	c #737572",
+">	c #7F817E",
+",	c #898B88",
+"'	c #9FA19E",
+")	c #ABADAA",
+"!	c #C1C3C0",
+"     =-         ",
+"     ;.@;       ",
+"     '+.*'*%$-  ",
+"     &........+%",
+" =$+.......#...-",
+" ;$$@..#%-)!..@ ",
+"    ,.@     ..& ",
+"    =.%    >..- ",
+"    $.;    ;.@  ",
+"   ,.$     %.$  ",
+"   #@      @.>  ",
+"  =#      >.#   ",
+" ;&       $.,   ",
+" ,      !=.*    ",
+"         #&     ",
+"                "};
