@@ -130,6 +130,7 @@ enum server_type {
   BF1942_SERVER,
   JK3_SERVER,
   NETP_SERVER,
+  NEXUIZ_SERVER,
   GPS_SERVER,
   UNKNOWN_SERVER
 };
